src/main/openshift/graalkus-aot-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: graalkus-aot
  labels:
    mode: aot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graalkus-aot-app
  template:
    metadata:
      labels:
        app: graalkus-aot-app
    spec:
      containers:
        - name: graalkus-aot
          image: docker.io/fugeritorg/graalkus:latest-native
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "1000m"
            requests:
              memory: "64Mi"
              cpu: "10m"
---
kind: Service
apiVersion: v1
metadata:
  name: graalkus-aot-service
spec:
  ports:
    - name: http-80
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: graalkus-aot-app
