src/main/openshift/graalkus-jit-std-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: graalkus-jit-std
  labels:
    app: graalkus
    mode: jit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graalkus-jit-std-app
  template:
    metadata:
      labels:
        app: graalkus-jit-std-app
    spec:
      containers:
        - name: graalkus-jit-std
          image: docker.io/fugeritorg/graalkus:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
            requests:
              memory: "64Mi"
              cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: graalkus-jit-std-service
spec:
  ports:
    - name: http-80
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: graalkus-jit-std-app
