src/main/openshift/graalkus-aot-pgo-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: graalkus-aot-pgo
  labels:
    app: graalkus
    mode: jit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graalkus-aot-pgo-app
  template:
    metadata:
      labels:
        app: graalkus-aot-pgo-app
    spec:
      containers:
        - name: graalkus-aot-pgo
          image: docker.io/fugeritorg/graalkus:v1.3.4-native-pgo
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
            requests:
              memory: "64Mi"
              cpu: "300m"
---
kind: Service
apiVersion: v1
metadata:
  name: graalkus-aot-pgo-service
spec:
  ports:
    - name: http-80
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: graalkus-aot-pgo-app
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: graalkus-aot-pgo
  namespace: <PROJECT_NAME>
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      subresource: status
spec:
  host: graalkus-aot-pgo-<PROJECT_NAME>.<CLUSTER_DOMAIN>
  path: /
  to:
    kind: Service
    name: graalkus-aot-pgo-service
    weight: 100
  port:
    targetPort: http-80
  wildcardPolicy: None
status:
  ingress:
    - host: graalkus-aot-pgo-<PROJECT_NAME>.<CLUSTER_DOMAIN>
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.<CLUSTER_DOMAIN>
