src/main/openshift/graalkus-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: graalkus-ingress
  namespace: fugerit-dev
spec:
  defaultBackend:
    service:
      name: graalkus-aot-pgo-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /doc/example.pdf
            pathType: Exact
            backend:
              service:
                name: graalkus-jit-service
                port:
                  number: 80
